[package]
name = "cli-2fa"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
anyhow = "1.0.96"
keyring = { version = "3.6.2", features = ["apple-native", "windows-native", "linux-native"] }
totp-rs = "5.7.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
